Worked on extended attributes support #3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 TODO:
 * add support for extended attributes
+** add support for extent-based stored attributes
 
 * complete basic format version 4 and 5 support
 ** complete libfsxfs_file_entry_get_sub_file_entry_by_utf8_name
